SigmaCodebackup3rdSep/objects/Package__c.object
<CustomObject>
    <fields>
        <fullName>Canceled_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canceled Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Note__c</fullName>
        <label>Delivery Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaged Location</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Packaged Location,, Location, Packaging Location, Packaged Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Packages (Location)</relationshipLabel>
        <relationshipName>Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Packages (Merchant Account)</relationshipLabel>
        <relationshipName>Packages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PackagedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaged By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PackagedDate__c</fullName>
        <label>Packaged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Packages (Parent Account)</relationshipLabel>
        <relationshipName>Packages3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Package</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>In Shipment</fullName>
                </value>
                <value>
                    <fullName>Un-Package</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                    <isActive>false</isActive>
                    <label>Returned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sigma_Order__c</columns>
        <columns>Customer__c</columns>
        <columns>Status__c</columns>
        <columns>PackagedBy__c</columns>
        <columns>PackagedDate__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PK-{0000}</displayFormat>
        <label>Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>